-
Bug
-
Resolution: Fixed
-
P1: Critical
-
6.7.0
-
None
-
-
699ddcb15 (dev), 681022021 (6.7)
In https://code.qt.io/cgit/qt/qtbase.git/tree/src/corelib/tools/qspan.h?h=6.7.0#n300 there's
#if __cpp_lib_span
instead of
#ifdef __cpp_lib_span
This breaks build of anything that includes QSpan with C++17 and -Werror=undef
| For Gerrit Dashboard: QTBUG-123937 | ||||||
|---|---|---|---|---|---|---|
| # | Subject | Branch | Project | Status | CR | V |
| 552508,3 | Use ifdef instead of if for __cpp_lib_span | dev | qt/qtbase | Status: MERGED | +2 | 0 |
| 552668,2 | Use ifdef instead of if for __cpp_lib_span | 6.7 | qt/qtbase | Status: MERGED | +2 | 0 |